force-app/main/default/objects/Merchandise__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Andhra Pradesh</fullName>
            </value>
            <value>
                <fullName>Arunachal Pradesh</fullName>
            </value>
            <value>
                <fullName>Haryana</fullName>
            </value>
            <value>
                <fullName>Himachal Pradesh</fullName>
            </value>
            <value>
                <fullName>Karnataka</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>New Jersey</fullName>
            </value>
            <value>
                <fullName>Tokiyo</fullName>
            </value>
            <value>
                <fullName>Hiroshima</fullName>
            </value>
            <value>
                <fullName>Nagasaki</fullName>
            </value>
            <value>
                <fullName>Chengdu</fullName>
            </value>
            <value>
                <fullName>Mianyang</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Scotland</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>