force-app/main/default/objects/Merchandise__c/fields/Unique_Value__c.field-meta.xml
<CustomField>
    <fullName>Unique_Value__c</fullName>
    <label>Unique Value</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>