force-app/main/default/objects/Merchandise__c/listViews/My_queue_Merchandise.listView-meta.xml
<ListView>
    <fullName>My_queue_Merchandise</fullName>
    <filterScope>Queue</filterScope>
    <label>My queue</label>
    <queue>My_queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>